fixed slight issue with overflow on ul/ol elements

--- a/src/templates/BlogPostTemplate.scss
+++ b/src/templates/BlogPostTemplate.scss
@@ -99,9 +99,19 @@
 
   ul,
   ol {
+    width: 90%;
+
     li {
       font-size: $blogParagraphFontSizeLarge;
       margin-bottom: 15px;
+
+      code {
+        white-space: pre-wrap; /* Since CSS 2.1 */
+        white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+        white-space: -pre-wrap; /* Opera 4-6 */
+        white-space: -o-pre-wrap; /* Opera 7 */
+        word-wrap: break-word; /* Internet Explorer 5.5+ */
+      }
     }
   }
 }
